--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1,6 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap');
 
+@mixin flexCenter($direction, $justify, $align){
+  display: flex;
+  flex-direction: $direction;
+  justify-content: $justify;
+  align-items: $align;
+}
 
+//////////* General styles *//////////
 body{
   background-color: wheat;
   font: 14px "Josefin Sans", Helvetica, Arial, sans-serif;
@@ -10,16 +17,27 @@ body{
   }
 }
 main{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  @include flexCenter(column, center, center);
 }
 .title{
   font-weight: 800;
   font-size: 3rem;
-  text-align: center;
   margin: 60px 0 40px;
+}
+h2{
+  margin: 0 0 50px;
+}
+h3{
+  text-align: center;
+  font-size: 1.5rem;
+  font-weight: 600;
+  margin: 10px 0;
+}
+h4{
+  margin: 10px 0;
+}
+h6{
+  margin: 5px 0 0;
 }
 input{
   font: 18px 'Josefin Sans', sans-serif;
@@ -28,14 +46,14 @@ input{
   height: 30px;
   background-color: antiquewhite;
   border: none;
-  margin: 5px 0;
+  margin: 5px;
 }
 button{
   background-color: tan;
   font: 24px 'Josefin Sans', sans-serif;
   height: 50px;
   border: none;
-  margin: 10px 0;
+  margin: 10px;
   border-radius: 8px;
   padding: 8px;
   &:hover{
@@ -45,75 +63,7 @@ button{
     background-color: bisque;
   }
 }
-#signup-form{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-#login-form{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.knowledge-points{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  font-size: 1.3rem;
-  p{
-    text-align: center;
-    font-size: 1.5rem;
-    font-weight: 600;
-    margin: 100px 0 0;
-  }
-}
-#points-num{
-  color: red;
-  font-size: 1.8rem;
-  font-weight: 800;
-  margin: 20px 0;
-}
-.saved-comments{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  font-size: 1.3rem;
-  p{
-    text-align: center;
-    font-size: 1.5rem;
-    font-weight: 600;
-    margin: 100px 0 0;
-  }
-  table{
-    margin: 30px;
-  }
-  tr{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-  }
-  td{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    padding: 5px 20px;
-  }
-  input{
-    width: 120px;
-  }
-  button{
-    // background: none;
-    width: 40px;
-    height: 40px;
-    margin: 0 5px;
-  }
-  img{
-    width: 10px;
-  }
-}
-
-/* Style the buttons that are used to open and close the accordion panel */
-.accordion {
+.accordion-btn {
   text-align: center;
   cursor: pointer;
   padding: 18px;
@@ -126,18 +76,7 @@ button{
     background-color: bisque;
   }
 }
-
-/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
-.active{
-  padding: 16px;
-  border: 2px groove saddlebrown;
-  color: saddlebrown;
-  font-weight: 600;
-  background-color: bisque;
-}
-
-/* Style the accordion panel. Note: hidden by default */
-.panel {
+.accordion-panel{
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -145,59 +84,59 @@ button{
   background-color: bisque;
   padding: 0 18px;
   max-height: 0;
+  // height: auto;
   overflow: hidden;
   transition: max-height 0.2s ease-out;
-  .admin-users-main-table{
-    font-weight: 600;
+}
+.accordion-active{
+  padding: 16px;
+  border: 2px groove saddlebrown;
+  color: saddlebrown;
+  font-weight: 600;
+  background-color: antiquewhite;
+}
+table {
+  font-weight: 600;
+  margin: 10px;
+  border: 2px ridge saddlebrown;
+  -webkit-box-shadow: 0px 10px 10px 2px rgba(0,0,0,0.5);
+  -moz-box-shadow: 0px 10px 10px 2px rgba(0,0,0,0.5);
+  box-shadow: 0px 10px 10px 2px rgba(0,0,0,0.5);
+  th{
     background-color: tan;
-    margin: 15px;
+    font-weight: 800;
+    font-size: 1.2rem;
+    text-align: center;
+    vertical-align: middle;
+    height: 60px;
+    padding: 0 20px;
+    border: 1px solid saddlebrown;
+  }
+  tr{
+    background-color: peachpuff;
+  }
+  td{
+    padding: 10px 20px;
     width: auto;
-    border: 2px ridge saddlebrown;
-    -webkit-box-shadow: 0px 10px 10px 2px rgba(0,0,0,0.5);
-    -moz-box-shadow: 0px 10px 10px 2px rgba(0,0,0,0.5);
-    box-shadow: 0px 10px 10px 2px rgba(0,0,0,0.5);
-    th{
-      font-weight: 800;
-      font-size: 1.2rem;
+    img{
+      width: 10px;
+    }
+    button{
+      padding: 0;
       text-align: center;
-      vertical-align: middle;
-      height: 60px;
-      padding: 0 20px;
-      border: 1px solid saddlebrown;
+      height: 30px;
+      width: 30px;
     }
-    .border-sides{
-      border-left: 1px solid saddlebrown;
-      border-right: 1px solid saddlebrown;
-    }
-    .admin-user-tablerow{
-      background-color: peachpuff;
-      td{
-        padding: 10px 20px;
-        width: auto;
-      }
-      .admin-user-checkbox{
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        width: auto;
-        input{
-          width: 20px;
-        }
-      }
-      .td-knowledge-points{
-        text-align: center;
-      }
-      img{
-        width: 10px;
-      }
-      button{
-        padding: 0;
-        text-align: center;
-        height: 30px;
-        width: 30px;
+    .td-checkbox{
+      @include flexCenter(row, center, center);
+      input{
+        width: 20px;
       }
     }
+  }
+  .border-sides{
+    border-left: 1px solid saddlebrown;
+    border-right: 1px solid saddlebrown;
   }
 }
 .admin-form{
@@ -213,76 +152,31 @@ button{
   -webkit-box-shadow: 0px 10px 10px 2px rgba(0,0,0,0.5);
   -moz-box-shadow: 0px 10px 10px 2px rgba(0,0,0,0.5);
   box-shadow: 0px 10px 10px 2px rgba(0,0,0,0.5);
-  p{
-    margin: 20px 0;
-  }
-  .admin-new-user-checkbox{
-    vertical-align: middle;
-  }
-  .checkbox-admin-new{
-    width: 100px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    font-size: 1.1rem;
-    
-    &>*{
-      padding: 0 10px;
-    }
-  }
 }
-// .modal{
-//     display: none; /* Hidden by default */
-//     position: fixed; /* Stay in place */
-//     z-index: 1; /* Sit on top */
-//     left: 0;
-//     top: 0;
-//     width: 100%; /* Full width */
-//     height: 100%; /* Full height */
-//     overflow: auto; /* Enable scroll if needed */
-//     background-color: rgb(0,0,0); /* Fallback color */
-//     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-//   .modal-content {
-//     background-color: #fefefe;
-//     margin: 15% auto; /* 15% from the top and centered */
-//     padding: 20px;
-//     border: 1px solid #888;
-//     width: 80%; /* Could be more or less, depending on screen size */
-//   }
-//   .close-modal {
-//     color: #aaa;
-//     float: right;
-//     font-size: 28px;
-//     font-weight: bold;
-//     &:hover, :focus{
-  //       color: black;
-  //       text-decoration: none;
-  //       cursor: pointer;
-  //     }
-  //   }
-  // }
-  
-  .modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
+  width: 100%;
+  height: 100%;
+  overflow: scroll;
+  // background-color: rgb(0,0,0); /* Fallback color */
   background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
   transition: 1s;
+  &::-webkit-scrollbar {
+    display: none;
+  }
   .modal-content {
-    display: flex;
-    background-color: #fefefe;
-    margin: 15% auto; /* 15% from the top and centered */
+    @include flexCenter(column, center, center);
+    background-color: peachpuff;
+    margin: 15% auto;
     padding: 10px;
     border: 1px solid #888;
-    width: 50%; /* Could be more or less, depending on screen size */
+    width: 532px;
     height: auto;
+    max-height: 80%;
     .close-modal {
       color: #aaa;
       float: right;
@@ -298,11 +192,11 @@ button{
         cursor: pointer;
       }
     }
-    .modal-edit-data{
+    .modal-data{
       display: flex;
       flex-direction: row;
       height: 100%;
-      .modal-edit-label{
+      .modal-label{
         display: flex;
         flex-direction: column;
         width: 40%;
@@ -313,15 +207,68 @@ button{
           padding: 8px 10px;
         }
       }
-      .modal-edit-input{
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
+      .modal-input{
+        @include flexCenter(column, null, flex-start);
         width: 60%;
       }
     }
-    button{
-      margin-bottom: 0;
+  }
+}
+#signup-form{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+#login-form{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+//////////* Personal page *//////////
+.mp-knowledge-points{
+  @include flexCenter(column, center, center);
+    font-size: 1.5rem;
+    font-weight: 600;
+    margin: 20px;
+  #points-num{
+    color: red;
+    font-size: 2rem;
+    font-weight: 800;
+    margin: 20px 0;
+  }
+}
+.mp-comments-main{
+  margin: 20px 0;
+  .mp-comments-div{
+    @include flexCenter(column, center, center);
+    font-size: 1.3rem;
+    margin: 10px 0;
+    .mp-comments-actions-div{
+      @include flexCenter(row, center, center);
     }
   }
+  #mp-comments-form{
+    @include flexCenter(row, center, center);
+    button{
+      width: 100px;
+    }
+  }
+}
+
+//////////* Admin page *//////////
+.ap-users-table-kp{
+  text-align: center;
+}
+.ap-users-form-checkbox{
+  @include flexCenter(row, center, center);
+  width: 100px;
+  font-size: 1.1rem;
+  input{
+    width: 40px;
+    padding: 0 10px;
+  }
+}
+#ap-alloys-form-input-div{
+  @include flexCenter(column, center, center)
 }
