--- a/views/layouts/noAuth.hbs
+++ b/views/layouts/noAuth.hbs
@@ -12,11 +12,17 @@
 
   <nav class="nav-bar">
     <div class="nav-btn-left">
-      <a href="/"><img class="atom-icon" src="images/atom.svg"></a>
+      <a href="/"><img class="animated-main-logo" src="images/atom.svg" alt="atom-icon"></a>
     </div>
     <div class="nav-btn-right">
-      <a id="nav-login" class="nav-btn" href="/login">Login</a>
-      <a id="nav-signup" class="nav-btn" href="/signup">Sign up</a>
+      <a class="nav-btn animate-btn" href="/login">
+        <img src="/images/login-icon.png" alt="login-icon">
+        <span>Login</span>
+      </a>
+      <a class="nav-btn animate-btn" href="/signup">
+        <img src="/images/signup-icon.png" alt="signup-icon">
+        <span>Sign up</span>
+      </a>
     </div>
   </nav>
 
