--- a/views/layouts/adminLayout.hbs
+++ b/views/layouts/adminLayout.hbs
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>AlloyMeApp</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
   <link rel="stylesheet" href="/stylesheets/style.css"/>
   <link rel="stylesheet" href="/stylesheets/styles-nav-bar.css">
 </head>
@@ -13,11 +12,17 @@
 
   <nav class="nav-bar">
     <div class="nav-btn-left">
-      <a href="/"><img class="atom-icon" src="images/atom.svg"></a>
-      <a class="nav-btn" href="/admin-page">Admin page</a>
+      <a href="/"><img class="animated-main-logo" src="images/atom.svg" alt="atom-icon"></a>
+      <a class="nav-btn animate-btn" href="/admin-page">
+        <img src="/images/admin-icon.png" alt="admin-icon">
+        <span>Admin page</span>
+      </a>
     </div>
     <div class="nav-btn-right">
-      <a id="nav-logout" class="nav-btn" href="/logout">Logout</a>
+      <a class="nav-btn animate-btn" href="/logout">
+        <img src="/images/logout-icon.png" alt="logout-icon">
+        <span>Logout</span>
+      </a>
     </div>
   </nav>
 
